# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py
page_analyzer/templates/: index.html
page_analyzer/templates/urls/: index.html  show.html
test/: test_test.py
